--- a/views/login.ejs
+++ b/views/login.ejs
@@ -16,7 +16,7 @@
       <form action="/login" method="post">
         <input type="text" name="usuario" placeholder="Usuario" class="form-control mb-3">
         <input type="password" name="contraseña" placeholder="Contraseña" class="form-control mb-3">
-        <button type="submit" class="btn btn-primary">Ingresar</button>
+        <button type="submit" class="btn btn-primary">INGRESAR</button>
       </form>
     </div>
   </div>
