--- a/views/stock.ejs
+++ b/views/stock.ejs
@@ -40,11 +40,11 @@
       </div>
 	  
 	    <!-- Exportar  -->
-		
-      <div class="col-md-4 text-end">
-        <a href="/exportar-excel" class="btn btn-success">Exportar a Excel</a>
-		
-      </div>
+	
+<div class="col-md-4 text-end">
+  <button id="btn-exportar-excel" class="btn btn-success">Exportar a Excel2</button>
+</div>	
+      
     </div>
 
     <!-- Tabla de productos-->
